--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,13 @@
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
-      "args": [],
+      "args": [
+        ""
+      ],
       "stopAtEntry": false,
-      "cwd": "c:\\Users\\irmar\\Documents\\GitHub\\Programming_2021_1sem",
+      "cwd": "c:/Users/irmar/Documents/GitHub/Programming_2021_1sem",
       "environment": [],
-      "program": "c:\\Users\\irmar\\Documents\\GitHub\\Programming_2021_1sem\\build\\Debug\\outDebug",
+      "program": "c:/Users/irmar/Documents/GitHub/Programming_2021_1sem/build/Debug/outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
